addons/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  labels:
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: woori-wallet
  annotations:
    alb.ingress.kubernetes.io/group.name: woori-wallet-prd-argocd
    alb.ingress.kubernetes.io/group.order: "10"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-name: woori-wallet-prd-argocd
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:655700895912:certificate/807f8b40-c30e-4a90-9c88-55e3264ba5f5
    alb.ingress.kubernetes.io/inbound-cidrs: 182.227.198.110/32
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    alb.ingress.kubernetes.io/success-codes: 200-399
spec:
  ingressClassName: alb
  tls:
    - hosts:
        - argocd.dannis.cloud
  rules:
    - host: argocd.dannis.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: http
